# fastapi

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
init/: init.sql
test/: test_senior_app.py
